--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run salad-bar:serve-ssr",
+    "serve:ssr": "node dist/salad-bar/server/main.js",
+    "build:ssr": "ng build && ng run salad-bar:server",
+    "prerender": "ng run salad-bar:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +23,7 @@
     "@angular/material": "^15.2.8",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/platform-server": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@angular/service-worker": "^15.2.0",
     "@ngrx/effects": "^15.4.0",
@@ -26,6 +31,7 @@
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
     "@nguniversal/express-engine": "^15.2.1",
+    "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -35,7 +41,10 @@
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
     "@angular/localize": "^15.2.8",
+    "@nguniversal/builders": "^15.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^14.15.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
